Better more general text-align fix.

--- a/src/css/modal.less
+++ b/src/css/modal.less
@@ -21,6 +21,7 @@
       text-align: initial;
     }
     .modal-contents {
+      text-align: left;
       position: relative;
       .close-icon {
         position: absolute;
