--- a/src/css/new-message.less
+++ b/src/css/new-message.less
@@ -1,7 +1,6 @@
 @import (reference) 'variables.less';
 
 .new-message-container {
-  text-align: left;
   .clearafter();
   border-radius: 3px;
   background-color: @background-differentiator;
